# StickerAlbumV1

./: CMakeLists.txt  main.cpp
UnitTests/: SVV1_UnitTests_AbstractStickerClass.cpp  SVV1_UnitTests_AlbumClasses.cpp  SVV1_UnitTests_FileCreationAndReading.cpp  SVV1_UnitTests_FunctionalProgramming.cpp  SVV1_UnitTests_StickerPackAndGeneralSticker.cpp
source/Headers/: SVV1_Album.hpp  SVV1_GeneralSticker.hpp  SVV1_StickerPack.hpp  SVV1_Utilities.hpp
source/Implementations/: SVV1_Album.cpp  SVV1_GeneralSticker.cpp  SVV1_StickerPack.cpp  SVV1_Utilities.cpp
source/Values/: SVV1_ExecutionConstants.hpp
theory/: SVV1_Implementation.md
